fix: stop use of List.of